agregando los estilos responsive al portafolio

--- a/procesos/index.html
+++ b/procesos/index.html
@@ -253,6 +253,18 @@
         });
     </script>
 
+    <script>
+        /* agregar scroll a la barra de navegacion */
+        var nav = document.querySelector('nav');
+        window.addEventListener('scroll',function (){
+            if(window.pageYOffset > 500){
+                nav.classList.add("nav_overlay");
+            }else{
+                nav.classList.remove("nav_overlay");
+            }
+        });
+    </script>
+
     <script src="/js/main.js"></script>
 
     
