--- a/procesos/portafolio.html
+++ b/procesos/portafolio.html
@@ -85,6 +85,9 @@
                     <div class="grid-item"><a href="/imagenes/18.jpg" data-lightbox="Portafolio-item"><img src="/imagenes/18.jpg" alt="portafolio-18"></a></div>
                     <div class="grid-item"><a href="/imagenes/19.jpg" data-lightbox="Portafolio-item"><img src="/imagenes/19.jpg" alt="portafolio-19"></a></div>
                     <div class="grid-item"><a href="/imagenes/20.jpg" data-lightbox="Portafolio-item"><img src="/imagenes/20.jpg" alt="portafolio-20"></a></div>
+                    <div class="grid-item"><a href="/imagenes/21.jpg" data-lightbox="Portafolio-item"><img src="/imagenes/21.jpg" alt="portafolio-20"></a></div>
+                    <div class="grid-item"><a href="/imagenes/22.jpg" data-lightbox="Portafolio-item"><img src="/imagenes/22.jpg" alt="portafolio-20"></a></div>
+                    <div class="grid-item"><a href="/imagenes/23.jpg" data-lightbox="Portafolio-item"><img src="/imagenes/23.jpg" alt="portafolio-20"></a></div>
                 </div>
             </div>
         </div>
@@ -165,28 +168,21 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-    <script src="/js/slippry.min.js"></script>
 
-        <!-- Slippry -->
     <script>
-        $(document).ready(function(){
-            $('#slippry').slippry({
-                captions: false,
-                pager: false,
-                autoDelay: 1000
-            })
-
-            lightbox.option({
-            'resizeDuration': 200,
-            'disableScrolling': true,
-            'maxWidth': 1000,
-            'positionFromTop':50
-            })
+       /* agregar scroll a la barra de navegacion */
+        var nav = document.querySelector('nav');
+        window.addEventListener('scroll',function (){
+            if(window.pageYOffset > 120){
+                nav.classList.add("nav_overlay");
+            }else{
+                nav.classList.remove("nav_overlay");
+            }
         });
     </script>
 
-    <script src="/js/main.js"></script>
+    
     <script src="/js/lightbox.min.js"></script>
-
+    <script src="/js/main.js"></script>
 </body>
 </html>
