--- a/procesos/index.html
+++ b/procesos/index.html
@@ -40,7 +40,7 @@
             <div class=" collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto ">
                     <li class="nav-item  link-active"><a class="nav-link mx-2" href="index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link mx-2" href="#">Trabajos Recientes</a></li>
+                    <li class="nav-item"><a class="nav-link mx-2" href="trabajos.html">Trabajos Recientes</a></li>
                     <li class="nav-item"><a class="nav-link mx-2" href="portafolio.html">Portafolio</a></li>
                     <li class="nav-item"><a class="nav-link mx-2" href="contacto.html"> Contacto </a></li>
                 </ul>
