--- a/procesos/trabajos.html
+++ b/procesos/trabajos.html
@@ -78,14 +78,13 @@
                 <div class="col-xl-2">
                     <p class="white"><strong>Mapa del Sitio </strong></p>
                     <ul class="white">
-                        <li class="small">Inicio</li>
-                        <li class="small">Nosotros</li>
-                        <li class="small">Portafolio</li>
-                        <li class="small">Contacto</li>
+                        <li class="small"><a href="/procesos/index.html" class="text-reset text-decoration-none"> Inicio </a></li>
+                        <li class="small"><a href="/procesos/trabajos.html" class="text-reset text-decoration-none">Trabajos Recientes</a></li>
+                        <li class="small"><a href="/procesos/portafolio.html" class="text-reset text-decoration-none">Portafolio</a></li>
+                        <li class="small"><a href="/procesos/contacto.html" class="text-reset text-decoration-none">Contacto</a></li>
                         <hr>
-                        <li class="small">Servicios</li>
-                        <li class="small">Facturacion</li>
-                        <li class="small">Terminos y Condiciones</li>
+                        <li class="small"><a href="/procesos/index.html#nosotros" class="text-reset text-decoration-none">Nosotros</a></li>
+                        <li class="small"><a href="/procesos/index.html#servicios" class="text-reset text-decoration-none">Servicios</a></li>
                     </ul>
                 </div>
                 <div class="col-xl-6">
@@ -110,10 +109,10 @@
                     <br>
                     <p class="white"><strong>Redes Sociales</strong></p>
                     <ul class="social_networks">
-                        <li><i class="bi bi-facebook"></i></li>
-                        <li><i class="bi bi-facebook"></i></li>
-                        <li><i class="bi bi-facebook"></i></li>
-                        <li><i class="bi bi-facebook"></i></li>
+                        <li><i><a href="https://www.facebook.com"><ion-icon name="logo-facebook"></ion-icon></a></i></li>
+                        <li><i><a href="https://www.instagram.com"><ion-icon name="logo-instagram"></ion-icon></a></i></li>
+                        <li><i><a href="#"><ion-icon name="logo-facebook" class="social-icon"></ion-icon></a></i></li>
+                        <li><i><a href="#"><ion-icon name="logo-facebook" class="social-icon"></ion-icon></a></i></li>
                     </ul>
                 </div>
             </div>
